Add `head` and `body` attrs

--- a/index.html
+++ b/index.html
@@ -1,58 +1,63 @@
 <html lang="en">
-  <h2>
-    Welcome to my super cool site.
-  </h2>
+  <head>
+    <title>Jessie A. Young's Personal Website</title>
+  </head>
+  <body>
+    <h2>
+      Welcome to my super cool site.
+    </h2>
 
-  <div>
-    This is me, IRL:
-  </div>
+    <div>
+      This is me, IRL:
+    </div>
 
-  <img src="images/jessieay.jpg" alt= "Jessie standing in front of a pond" />
+    <img src="images/jessieay.jpg" alt= "Jessie standing in front of a pond" />
 
-  <div>
-    This is me, everywhere else:
-  </div>
+    <div>
+      This is me, everywhere else:
+    </div>
 
-  <ul>
-    <li>
+    <ul>
+      <li>
       <a href="http://www.linkedin.com/in/jessieayoung" target="_blank">
         LinkedIn
       </a>
-    </li>
-    <li>
+      </li>
+      <li>
       <a href="http://www.twitter.com/jessieay" target="_blank">
         Twitter
       </a>
-    </li>
-    <li>
+      </li>
+      <li>
       <a href="https://github.com/jessieay" target="_blank">
         GitHub
       </a>
-    </li>
-    <li>
+      </li>
+      <li>
       <a href="https://www.facebook.com/jessieayoung" target="_blank">
         Facebook
       </a>
-    </li>
-    <li>
+      </li>
+      <li>
       <a href="http://jessiecodes.wordpress.com/" target="_blank">
         Coding Blog
       </a>
-    </li>
-    <li>
+      </li>
+      <li>
       <a href="http://jessieay.wordpress.com/" target="_blank">
         Blog Blog
       </a>
-    </li>
-    <li>
+      </li>
+      <li>
       <a href="http://www.goodreads.com/user/show/2523297-jessie-young"
         target="_blank">
         Goodreads
       </a>
-    </li>
-  </ul>
+      </li>
+    </ul>
 
-  or, feel free to
-  <a href="mailto:jessie.a.young@gmail.com?subject=Here is a good email" target="_blank">email me</a>,
-  I love a good email.
+    or, feel free to
+    <a href="mailto:jessie.a.young@gmail.com?subject=Here is a good email" target="_blank">email me</a>,
+    I love a good email.
+  </body>
 </html>
