update profile pic

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     </h2>
 
     <div>
-      This is me, IRL:
+      If we ever do a video call, it will probbaly look like this:
     </div>
 
-    <img src="images/jessieay.jpg" alt= "Jessie standing in front of a pond" />
+    <img src="images/jessieay.jpg" alt= "Jessie smiling into her webcam" />
 
     <div>
       This is me, everywhere else:
