Typo and consistentize copy

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     </h2>
 
     <div>
-      If we ever do a video call, it will probbaly look like this:
+      If we ever meet (virtually), it will probably look like this:
     </div>
 
     <img src="images/jessieay.jpg" alt= "Jessie smiling into her webcam" />
 
     <div>
-      This is me, everywhere else:
+      If you want to look me up (virtually), here are some good places to start:
     </div>
 
     <ul>
