--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
       </a>
       </li>
       <li>
+      <a href="https://gitlab.com/jessieay" target="_blank">
+        GitLab
+      </a>
+      </li>
+      <li>
       <a href="https://github.com/jessieay" target="_blank">
         GitHub
       </a>
